# v4

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.js
.github/workflows/: tauri.yml
docs/: CNAME  _config.yml  index.html  version.json  window.html  wsl.md
docs/docs/: cli.md  index.md  linux.md  macos.md  options.md  windows.md  wsl.md
src/: App.svelte  Begin.svelte  Compiler.svelte  Done.svelte  Options.svelte  Vscode.svelte  Workspace.svelte  app.css  config_store.ts  global.d.ts  main.ts  save_profile.ts
src-tauri/: .gitignore  Cargo.toml  add_to_path.wxs  rustfmt.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: build.rs  cli.rs  gui.rs  handlers.rs  log.rs  main.rs  tasks.rs  utils.rs
src-tauri/src/cli/: args.rs  mod.rs  prompt.rs
src-tauri/src/scripts/: check-ascii.ps1  pause-console-launcher.sh  pause-console.ps1  pause-console.rb  pause-console.sh
src-tauri/src/steps/: compiler.rs  mod.rs  options.rs  vscode.rs  workspace.rs
src-tauri/src/steps/compiler/: apple.rs  common.rs  gcc.rs  llvm.rs  mingw.rs  mod.rs  msvc.rs  stdchoose.rs  verparse.rs
src-tauri/src/tasks/: dotvscode.rs  extension.rs  mod.rs  run.rs  statistics.rs  test.rs
src-tauri/src/utils/: compiler.rs  handlers.rs  mod.rs  options.rs  reg.rs  sysctl.rs  vscode.rs  winapi.rs  winreg.rs
src-tauri/src/utils/compiler/: mingw.rs  mod.rs  msvc.rs  verparse.rs
src-tauri/src/utils/compiler_setup/: gcc_mingw.rs  llvm_mingw.rs  mingw.rs  mod.rs  msvc.rs
