[package]
name = "vscch"
version = "4.0.0"
description = "VS Code Config Helper v4"
authors = ["Guyutongxue"]
license = "GPLv3"
repository = ""
default-run = "vscch"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.7", features = [] }

[dependencies]
anyhow = { version = "1.0.55", features = ["backtrace"] }
chrono = "0.4.19"
clap = { version = "3.1.6", features = ["derive"] }
derivative = "2.2.0"
dirs = "4.0.0"
fern = { version = "0.6.0", features = ["colored"] }
log = "0.4.14"
once_cell = "1.9.0"
open = "2.1.0"
regex = "1.5.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.8", features = ["api-all"] }
version-compare = "0.1.0"
which = "4.2.4"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.10.1"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.32.0"
features = [
  "Win32_System_Environment",
  "Win32_Foundation",
  "Win32_UI_Shell",
  "Win32_Globalization",
  "Win32_System_Com",
  "Win32_System_Console",
  "Win32_System_Threading",
]

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.3.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
