[package]
name = "vscch"
version = "4.0.5"
description = "VS Code Config Helper v4"
authors = ["Guyutongxue"]
license = "GPLv3"
repository = ""
default-run = "vscch"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.7", features = [] }

[dependencies]
anyhow = { version = "1.0.55", features = ["backtrace"] }
chrono = "0.4.19"
clap = { version = "3.1.6", features = ["derive"] }
clap-verbosity-flag = "1.0.1"
derivative = "2.2.0"
dirs = "4.0.0"
fern = { version = "0.6.0", features = ["colored"] }
json5 = "0.4.1"
log = "0.4.14"
native-dialog = "0.6.3"
once_cell = "1.9.0"
open = "2.1.0"
os_info = "3.5.1"
rand = "0.8.5"
regex = "1.5.4"
requestty = "0.5.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0.85"
serde_variant = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.3", features = ["api-all"] }
version-compare = "0.1.0"
which = "4.2.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.44.0"
features = [
  "Win32_System_Environment",
  "Win32_Foundation",
  "Win32_UI_Shell",
  "Win32_Globalization",
  "Win32_System_Com",
  "Win32_System_Console",
  "Win32_System_Threading",
]

[target.'cfg(target_os = "macos")'.dependencies]
sysctl = "0.5.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
lto = true
